--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussionsSortedByPopularityForMonth.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussionsSortedByPopularityForMonth.cshtml
@@ -28,23 +28,26 @@
 }
 
 <div class="pagination-link-container">
-    @if (Model.PreviousPageNumber != 0 && Model.Discussions.Count != 0)
+    @if (Model.Discussions.Count != 0)
     {
-        <a class="pagination-link-previous" asp-controller="Discussion" asp-action="GetDiscussionsSortedByPopularityForMonth"
-           asp-route-pageNumber="@Model.PreviousPageNumber" asp-route-pageSize="@Model.PageSize">Назад</a>
-    }
-    else
-    {
-        <a class="pagination-link-previous-doesnt-exist">Назад</a>
-    }
-    @if (Model.DoesNextPageExist && Model.Discussions.Count != 0)
-    {
-        <a class="pagination-link-next" asp-controller="Discussion" asp-action="GetDiscussionsSortedByPopularityForMonth"
-           asp-route-pageNumber="@Model.NextPageNumber" asp-route-pageSize="@Model.PageSize">Вперед</a>
-    }
-    else
-    {
-        <a class="pagination-link-next-doesnt-exist">Вперед</a>
+        @if (Model.PreviousPageNumber != 0)
+        {
+            <a class="pagination-link-previous" asp-controller="Discussion" asp-action="GetDiscussionsSortedByPopularityForMonth"
+               asp-route-pageNumber="@Model.PreviousPageNumber" asp-route-pageSize="@Model.PageSize">Назад</a>
+        }
+        else
+        {
+            <a class="pagination-link-previous-doesnt-exist">Назад</a>
+        }
+        @if (Model.DoesNextPageExist)
+        {
+            <a class="pagination-link-next" asp-controller="Discussion" asp-action="GetDiscussionsSortedByPopularityForMonth"
+               asp-route-pageNumber="@Model.NextPageNumber" asp-route-pageSize="@Model.PageSize">Вперед</a>
+        }
+        else
+        {
+            <a class="pagination-link-next-doesnt-exist">Вперед</a>
+        }
     }
 </div>
 <script src="~/js/discussion/RatingColorChanging.js"></script>
