--- a/src/Web/Web.MVC/Web.MVC/Views/Topic/GetAllTopicsSortedByNovelty.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Topic/GetAllTopicsSortedByNovelty.cshtml
@@ -25,26 +25,29 @@
 }
 
 <div class="pagination-link-container">
-    @if (ViewBag.PreviousPageNumber != 0 && Model.Count != 0)
+    @if (Model.Count != 0)
     {
-        <a class="pagination-link-previous" asp-controller="Topic" asp-action="GetAllTopicsSortedByNovelty" asp-route-pageNumber="@ViewBag.PreviousPageNumber"
-           asp-route-pageSize="@ViewBag.PageSize">
-            Назад
-        </a>
-    }
-    else
-    {
-        <a class="pagination-link-previous-doesnt-exist">Назад</a>
-    }
-    @if (ViewBag.DoesNextPageExist && Model.Count != 0)
-    {
-        <a class="pagination-link-next" asp-controller="Topic" asp-action="GetAllTopicsSortedByNovelty" asp-route-pageNumber="@ViewBag.NextPageNumber"
-           asp-route-pageSize="@ViewBag.PageSize">
-            Вперед
-        </a>
-    }
-    else
-    {
-        <a class="pagination-link-next-doesnt-exist">Вперед</a>
+        @if (ViewBag.PreviousPageNumber != 0)
+        {
+            <a class="pagination-link-previous" asp-controller="Topic" asp-action="GetAllTopicsSortedByNovelty" asp-route-pageNumber="@ViewBag.PreviousPageNumber"
+               asp-route-pageSize="@ViewBag.PageSize">
+                Назад
+            </a>
+        }
+        else
+        {
+            <a class="pagination-link-previous-doesnt-exist">Назад</a>
+        }
+        @if (ViewBag.DoesNextPageExist)
+        {
+            <a class="pagination-link-next" asp-controller="Topic" asp-action="GetAllTopicsSortedByNovelty" asp-route-pageNumber="@ViewBag.NextPageNumber"
+               asp-route-pageSize="@ViewBag.PageSize">
+                Вперед
+            </a>
+        }
+        else
+        {
+            <a class="pagination-link-next-doesnt-exist">Вперед</a>
+        }
     }
 </div>
