--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/SuggestDiscussion.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/SuggestDiscussion.cshtml
@@ -17,7 +17,7 @@
         <div>
             <textarea class="suggest-discussion-textarea" rows="2" asp-for="Content" placeholder="Обсуждение"></textarea>
         </div>
-        <input class="suggest-discussion-submit" type="submit" value="предложить"/>
+        <input class="suggest-discussion-submit" type="submit" value="Предложить"/>
     </form>
 </div>
 <script>
