--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/SuggestDiscussion.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/SuggestDiscussion.cshtml
@@ -25,7 +25,10 @@
 
     commentInputs.forEach(commentInput => {
         commentInput.addEventListener('input', function() {
-            this.style.height = 'auto';
+            const inputHeight = commentInput.scrollHeight;
+            if (inputHeight < 350) {
+                this.style.height = 'auto';
+            }
             this.style.height = this.scrollHeight + 'px';
         });
     });
