Update css style

--- a/src/Web/Web.MVC/Web.MVC/wwwroot/css/user/dropdown.css
+++ b/src/Web/Web.MVC/Web.MVC/wwwroot/css/user/dropdown.css
@@ -38,3 +38,21 @@
 .active-dropdown-content:hover {
     color: orange;
 }
+
+@media (max-width: 768px) {
+    .dropdown-list {
+        right: 0;
+    }
+}
+
+@media (max-width: 600px) {
+    .dropdown-list {
+        right: 0;
+    }
+}
+
+@media (max-width: 520px) {
+    .dropdown-list {
+        right: 0;
+    }
+}
