--- a/src/Web/Web.MVC/Web.MVC/wwwroot/css/layout.css
+++ b/src/Web/Web.MVC/Web.MVC/wwwroot/css/layout.css
@@ -108,3 +108,21 @@ header.header {
     position: static;
     margin: 0 auto;
 }
+
+.hide-if-navbar-toggler {
+    color: black;
+    padding: .5rem 1rem;
+    text-decoration: none;
+    display: inline-block;
+}
+
+.hide-if-navbar-toggler:hover {
+    background-color: #f1f1f1;
+    color: orange;
+}
+
+@media (max-width: 575.98px) {
+    .hide-if-navbar-toggler {
+        display: none;
+    }
+}
