--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/ForgotPassword.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/ForgotPassword.cshtml
@@ -2,34 +2,37 @@
     ViewData["Title"] = "Забыли пароль";
 }
 @model Web.MVC.DTOs.ResetPassword.ForgotPasswordDto
+<link rel="stylesheet" href="~/css/auth/ForgotPassword.css"/>
+<link rel="stylesheet" href="~/css/ErrorMessageSpanValidation.css"/>
 
-<h3>Сбросить пароль</h3>
+<div class="forgot-password-page-container">
+    <h3 class="mb-3">Сбросить пароль</h3>
 
-<form method="post">
-    <div asp-validation-summary="ModelOnly"></div>
-    <div>
-        <label asp-for="Email"></label><br/>
-        <input asp-for="Email"/>
-        <span asp-validation-for="Email"></span>
-    </div>
-    <div>
-        <dnt-captcha asp-captcha-generator-max="99999"
-                     asp-captcha-generator-min="1000"
-                     asp-captcha-generator-language="Russian"
-                     asp-captcha-generator-display-mode="ShowDigits"
-                     asp-use-relative-urls="true"
-                     asp-placeholder="Введите капчу"
-                     asp-validation-error-message="Пожалуйста, пройдите капчу"
-                     asp-too-many-requests-error-message="Слишком много запросов"
-                     asp-font-name="Tahoma"
-                     asp-font-size="20"
-                     asp-fore-color="#333333"
-                     asp-back-color="#ccc"
-                     asp-text-box-class="text-box single-line form-control col-md-4"
-                     asp-text-box-template="<div class='input-group col-md-4'><span class='input-group-addon'><span class='glyphicon glyphicon-lock'></span></span>{0}</div>"
-                     asp-validation-message-class="text-danger"
-                     asp-refresh-button-class="glyphicon glyphicon-refresh btn-sm"
-                     asp-show-refresh-button="true" />
-    </div>
-    <input type="submit" value="сбросить"/>
-</form>
+    <form method="post">
+        <div asp-validation-summary="ModelOnly"></div>
+        <span class="validation-message" asp-validation-for="Email"></span>
+        <div class="mb-2">
+            <input class="forgot-password-input" asp-for="Email" placeholder="Эл. почта"/>
+        </div>
+        <div class="forgot-password-captcha">
+            <dnt-captcha asp-captcha-generator-max="99999"
+                         asp-captcha-generator-min="1000"
+                         asp-captcha-generator-language="Russian"
+                         asp-captcha-generator-display-mode="ShowDigits"
+                         asp-use-relative-urls="true"
+                         asp-placeholder="Введите капчу"
+                         asp-validation-error-message="Пожалуйста, пройдите капчу"
+                         asp-too-many-requests-error-message="Слишком много запросов"
+                         asp-font-name="Tahoma"
+                         asp-font-size="20"
+                         asp-fore-color="#333333"
+                         asp-back-color="#ccc"
+                         asp-text-box-class="forgot-password-input"
+                         asp-text-box-template="<div>{0}</div>"
+                         asp-validation-message-class="text-danger"
+                         asp-refresh-button-class="glyphicon glyphicon-refresh btn-sm"
+                         asp-show-refresh-button="false"/>
+        </div>
+        <input class="forgot-password-submit" type="submit" value="Сбросить" />
+    </form>
+</div>
