--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/ResetPassword.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/ResetPassword.cshtml
@@ -2,20 +2,22 @@
     ViewData["Title"] = "Сброс пароля";
 }
 @model Web.MVC.DTOs.ResetPassword.ResetPasswordDto
+<link rel="stylesheet" href="~/css/ErrorMessageSpanValidation.css"/>
+<link rel="stylesheet" href="~/css/auth/ResetPassword.css"/>
 
-<h3>Сброс пароля</h3>
+<div class="reset-password-page-container">
+    <h3 class="mb-2">Сброс пароля</h3>
 
-<form method="post">
-    <div asp-validation-summary="ModelOnly"></div>
-    <div>
-        <label asp-for="Password"></label><br/>
-        <input asp-for="Password"/>
-        <span asp-validation-for="Password"></span>
-    </div>
-    <div>
-        <label asp-for="PasswordConfirm"></label><br />
-        <input asp-for="PasswordConfirm" />
-        <span asp-validation-for="PasswordConfirm"></span>
-    </div>
-    <input type="submit" value="сбросить"/>
-</form>
+    <form method="post">
+        <div asp-validation-summary="ModelOnly"></div>
+        <span class="validation-message" asp-validation-for="Password"></span>
+        <span class="validation-message" asp-validation-for="PasswordConfirm"></span>
+        <div>
+            <input class="reset-password-input" asp-for="Password" placeholder="Новый пароль" />
+        </div>
+        <div>
+            <input class="reset-password-input" asp-for="PasswordConfirm" placeholder="Подтвердите пароль" />
+        </div>
+        <input class="reset-password-submit" type="submit" value="Сбросить"/>
+    </form>
+</div>
