--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/ConfirmEmailPrepare.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/ConfirmEmailPrepare.cshtml
@@ -2,12 +2,13 @@
     ViewData["Title"] = "Почта не подтверждена";
 }
 @model Web.MVC.DTOs.Auth.ConfirmEmailPrepareDto
+<link rel="stylesheet" href="~/css/auth/ConfirmEmailPrepare.css"/>
 
-<div class="text-center">
-    <h3>Вы не были аутентифицированы, так как Ваша почта не подтверждена</h3>
+<div class="confirm-email-prepare-password-page-container">
+    <h3 class="mb-2">Вы не были аутентифицированы, так как Ваша почта не подтверждена</h3>
     <form method="post">
         <input type="hidden" name="userId" value="@Model.UserId"/>
-        <div>
+        <div class="confirm-email-prepare-password-captcha">
             <dnt-captcha asp-captcha-generator-max="99999"
                          asp-captcha-generator-min="1000"
                          asp-captcha-generator-language="Russian"
@@ -20,13 +21,12 @@
                          asp-font-size="20"
                          asp-fore-color="#333333"
                          asp-back-color="#ccc"
-                         asp-text-box-class="text-box single-line form-control col-md-4"
-                         asp-text-box-template="<div class='input-group col-md-4'><span class='input-group-addon'><span class='glyphicon glyphicon-lock'></span></span>{0}</div>"
+                         asp-text-box-class="confirm-email-prepare-password-input"
+                         asp-text-box-template="<div>{0}</div>"
                          asp-validation-message-class="text-danger"
                          asp-refresh-button-class="glyphicon glyphicon-refresh btn-sm"
-                         asp-show-refresh-button="true"
-            />
+                         asp-show-refresh-button="false" />
         </div>
-        <input type="submit" value="подтвердить почту"/>
+        <input class="confirm-email-prepare-password-submit" type="submit" value="Подтвердить почту" />
     </form>
 </div>
