--- a/src/Web/Web.MVC/Web.MVC/wwwroot/css/layout.css
+++ b/src/Web/Web.MVC/Web.MVC/wwwroot/css/layout.css
@@ -1,28 +1,59 @@
-﻿div.profile-btns {
+﻿div.first-profile-btns {
     margin: 0;
     padding: 0;
-    display: flex;
+    display: none;
     justify-content: flex-end;
-    align-items: center; 
+    align-items: center;
 }
-ul.profile-btns {
-    list-style-type: none; 
-    padding: 0; 
+ul.first-profile-btns {
+    list-style-type: none;
+    padding: 0;
     margin: 0;
 }
-li.profile-btns {
-    display: inline; 
+li.first-profile-btns {
+    display: inline;
 }
-a.profile-btns {
+a.first-profile-btns {
     color: black;
     padding: .5rem 1rem;
     text-decoration: none;
     display: inline-block;
 }
-a.profile-btns:hover {
+a.first-profile-btns:hover {
     background-color: #f1f1f1;
     color: orange;
 }
+
+div.second-profile-btns {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+ul.second-profile-btns {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+li.second-profile-btns {
+    display: inline;
+}
+
+a.second-profile-btns {
+    color: black;
+    padding: .5rem 1rem;
+    text-decoration: none;
+    display: inline-block;
+}
+
+a.second-profile-btns:hover {
+    background-color: #f1f1f1;
+    color: orange;
+}
+
 .dropdown-refs {
     color: black;
     padding: .5rem 1rem;
@@ -79,7 +110,7 @@ input.logout:hover {
 }
 .open-profile-dropdown-btn {
     border: 0;
-    background-color: white;
+    background-color: transparent;
     padding: 10px 15px;
     color: black;
     cursor: pointer;
@@ -123,6 +154,12 @@ header.header {
 
 @media (max-width: 575.98px) {
     .hide-if-navbar-toggler {
+        display: none;
+    }
+    div.first-profile-btns {
+        display: flex;
+    }
+    div.second-profile-btns {
         display: none;
     }
 }
