--- a/src/Web/Web.MVC/Web.MVC/Views/Shared/ActionError.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Shared/ActionError.cshtml
@@ -1,5 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Что-то пошло не так";
 }
+<link rel="stylesheet" href="~/css/Link.css"/>
+
 <h3>Что-то пошло не так, попробуйте ещё раз</h3>
-<a asp-controller="Home" asp-action="Index">На главную</a>
+<div class="links-container">
+    <a class="link" asp-controller="Home" asp-action="Index">На главную</a>
+</div>
