--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/Confirmation.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/Confirmation.cshtml
@@ -1,5 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Подтверждение почты";
 }
+<link rel="stylesheet" href="~/css/Link.css" />
+
 <h3>Для завершения регистрации проверьте электронную почту и перейдите по ссылке, указанной в письме</h3>
-<a asp-controller="Home" asp-action="Index">На главную</a>
+
+<div class="links-container">
+    <a class="link" asp-controller="Home" asp-action="Index">На главную</a>
+</div>
