--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/ConfirmEmail.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/ConfirmEmail.cshtml
@@ -1,5 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Почта успешно подтверждена";
 }
+<link rel="stylesheet" href="~/css/Link.css" />
+
 <h3>Вы успешно подтвердили свою почту</h3>
-<a asp-controller="Home" asp-action="Index">На главную</a>
+
+<div class="links-container">
+    <a class="link" asp-controller="Home" asp-action="Index">На главную</a>
+</div>
