--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/Success.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/Success.cshtml
@@ -1,6 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Пароль обновлен";
 }
+<link rel="stylesheet" href="~/css/Link.css"/>
+
 <h3>Пароль успешно обновлен</h3>
 
-<a asp-controller="Home" asp-action="Index">На главную</a>
+<div class="links-container">
+    <a class="link" asp-controller="Home" asp-action="Index">На главную</a>
+</div>
