--- a/src/Web/Web.MVC/Web.MVC/Views/Topic/Thanks.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Topic/Thanks.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Спасибо";
 }
-<div class="text-center">
-    <h3>Ваше предложение по созданию темы передано на проверку, статус проверки смотрите в профиле</h3>
-    <a asp-controller="Home" asp-action="Index">На главную</a>
+<link rel="stylesheet" href="~/css/Link.css" />
+
+<h3>Ваше предложение по созданию темы передано на проверку, статус проверки смотрите в профиле</h3>
+
+<div class="links-container">
+    <a class="link" asp-action="Index" asp-controller="Home">На главную</a>
 </div>
