--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/Thanks.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/Thanks.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Спасибо";
 }
-<div class="text-center">
+<link rel="stylesheet" href="~/css/Link.css"/>
 <h3>В ближайшее время модерация рассмотрит Ваше обсуждение, следите за статусом проверки в профиле</h3>
-<a asp-action="Index" asp-controller="Home">На главную</a>
+
+<div class="links-container">
+    <a class="link" asp-action="Index" asp-controller="Home">На главную</a>
 </div>
