--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/SomethingWentWrong.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/SomethingWentWrong.cshtml
@@ -2,9 +2,11 @@
     ViewData["Title"] = "Что-то пошло не так";
 }
 @model Guid
+<link rel="stylesheet" href="~/css/Link.css"/>
 
-<div class="text-center">
-    <h3>Что-то пошло не так, попробуйте ещё раз</h3>
-    <a asp-action="GetDiscussion" asp-controller="Discussion" asp-route-id="@Model" asp-route-pageNumber="1" asp-route-pageSize="20">к обсуждению</a>
-    <a asp-controller="Home" asp-action="Index">на главную</a>
+<h3>Что-то пошло не так, попробуйте ещё раз</h3>
+
+<div class="links-container">
+    <a class="link" asp-controller="Home" asp-action="Index">На главную</a>
+    <a class="link" asp-action="GetDiscussion" asp-controller="Discussion" asp-route-id="@Model" asp-route-pageNumber="1" asp-route-pageSize="20">К обсуждению</a>
 </div>
