Add show/hide password button

--- a/src/Web/Web.MVC/Web.MVC/wwwroot/css/user/ChangePassword.css
+++ b/src/Web/Web.MVC/Web.MVC/wwwroot/css/user/ChangePassword.css
@@ -2,6 +2,23 @@
     margin-bottom: 20px;
 }
 
+.password-container {
+    position: relative;
+}
+
+.eye-icon {
+    position: absolute;
+    top: 50%;
+    right: 66%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    background: none;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    color: black;
+}
+
 .change-password-input {
     width: 35%;
     padding: 12px 15px;
@@ -39,50 +56,67 @@
 
 @media (max-width: 1200px) {
     .change-password-input {
-        width: 38%;
+        width: 50%;
     }
 
     .change-password-submit {
         width: 12%;
     }
+    .eye-icon {
+        right: 51%;
+    }
 }
 
 @media (max-width: 992px) {
     .change-password-input {
-        width: 41%;
+        width: 60%;
     }
 
     .change-password-submit {
         width: 14%;
     }
+
+    .eye-icon {
+        right: 41%;
+    }
 }
 
 @media (max-width: 768px) {
     .change-password-input {
-        width: 48%;
+        width: 70%;
     }
 
     .change-password-submit {
         width: 18%;
     }
+
+    .eye-icon {
+        right: 31%;
+    }
 }
 
 @media (max-width: 600px) {
     .change-password-input {
-        width: 50%;
+        width: 75%;
     }
 
     .change-password-submit {
         width: 20%;
     }
+    .eye-icon {
+        right: 26%;
+    }
 }
 
 @media (max-width: 520px) {
     .change-password-input {
-        width: 55%;
+        width: 80%;
     }
 
     .change-password-submit {
         width: 23%;
+    }
+    .eye-icon {
+        right: 21%;
     }
 }
