--- a/src/Web/Web.MVC/Web.MVC/Views/User/ChangePassword.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/ChangePassword.cshtml
@@ -4,6 +4,7 @@
 @model Web.MVC.DTOs.User.ChangePasswordDto
 <link rel="stylesheet" href="~/css/ErrorMessageSpanValidation.css"/>
 <link rel="stylesheet" href="~/css/user/ChangePassword.css"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 <h3>Изменить пароль</h3>
 
@@ -11,11 +12,19 @@
     <div asp-validation-summary="ModelOnly"></div>
     <span class="validation-message" asp-validation-for="OldPassword"></span>
     <span class="validation-message" asp-validation-for="NewPassword"></span>
-    <div>
-        <input class="change-password-input" asp-for="OldPassword" placeholder="Старый пароль" />
+    <div class="password-container">
+        <input class="change-password-input" id="password" asp-for="OldPassword" placeholder="Старый пароль" />
+        <button type="button" class="eye-icon" onclick="togglePassword('password')">
+            <i class="fas fa-eye" id="eye-icon-password"></i>
+        </button>
     </div>
-    <div>
-        <input class="change-password-input" asp-for="NewPassword" placeholder="Новый пароль" />
+    <div class="password-container">
+        <input class="change-password-input" id="confirm-password" asp-for="NewPassword" placeholder="Новый пароль" />
+        <button type="button" class="eye-icon" onclick="togglePassword('confirm-password')">
+            <i class="fas fa-eye" id="eye-icon-confirm-password"></i>
+        </button>
     </div>
     <input class="change-password-submit" type="submit" value="Изменить"/>
 </form>
+
+<script src="~/js/ShowHidePassword.js"></script>
