--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/Login.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/Login.cshtml
@@ -3,6 +3,7 @@
 }
 @model Web.MVC.DTOs.Auth.LoginDto
 <link rel="stylesheet" href="~/css/auth/Login.css"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 <div class="login-form-container">
     <h2>Вход в аккаунт</h2>
@@ -13,8 +14,11 @@
         <div>
             <input class="login-input" asp-for="UserNameOrEmail" placeholder="Имя пользователя или адрес эл. почты"/>
         </div>
-        <div>
-            <input class="login-input mt-2" asp-for="Password" placeholder="Пароль"/>
+        <div class="password-container">
+            <input class="login-input mt-2" id="password" asp-for="Password" placeholder="Пароль" />
+            <button type="button" class="eye-icon" onclick="togglePassword('password')">
+                <i class="fas fa-eye" id="eye-icon-password"></i>
+            </button>
         </div>
         <div class="login-links-container">
             <a class="login-first-link" asp-controller="Auth" asp-action="ForgotPassword">Забыли пароль?</a>
@@ -23,3 +27,5 @@
         <input class="login-submit" type="submit" value="Войти"/>
     </form>
 </div>
+
+<script src="~/js/ShowHidePassword.js"></script>
