--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/ResetPassword.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/ResetPassword.cshtml
@@ -4,6 +4,7 @@
 @model Web.MVC.DTOs.ResetPassword.ResetPasswordDto
 <link rel="stylesheet" href="~/css/ErrorMessageSpanValidation.css"/>
 <link rel="stylesheet" href="~/css/auth/ResetPassword.css"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 <div class="reset-password-page-container">
     <h3 class="mb-2">Сброс пароля</h3>
@@ -12,12 +13,20 @@
         <div asp-validation-summary="ModelOnly"></div>
         <span class="validation-message" asp-validation-for="Password"></span>
         <span class="validation-message" asp-validation-for="PasswordConfirm"></span>
-        <div>
-            <input class="reset-password-input" asp-for="Password" placeholder="Новый пароль" />
+        <div class="password-container">
+            <input class="reset-password-input" id="password" asp-for="Password" placeholder="Новый пароль" />
+            <button type="button" class="eye-icon" onclick="togglePassword('password')">
+                <i class="fas fa-eye" id="eye-icon-password"></i>
+            </button>
         </div>
-        <div>
-            <input class="reset-password-input" asp-for="PasswordConfirm" placeholder="Подтвердите пароль" />
+        <div class="password-container">
+            <input class="reset-password-input" id="confirm-password" asp-for="PasswordConfirm" placeholder="Подтвердите пароль" />
+            <button type="button" class="eye-icon" onclick="togglePassword('confirm-password')">
+                <i class="fas fa-eye" id="eye-icon-confirm-password"></i>
+            </button>
         </div>
         <input class="reset-password-submit" type="submit" value="Сбросить"/>
     </form>
 </div>
+
+<script src="~/js/ShowHidePassword.js"></script>
