--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/Register.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/Register.cshtml
@@ -21,13 +21,13 @@
         </div>
         <div class="password-container">
             <input class="register-input" id="password" asp-for="Password" placeholder="Пароль" />
-            <button type="button" class="eye-icon" onclick="togglePassword('password')">
+            <button type="button" class="eye-icon-password" onclick="togglePassword('password')">
                 <i class="fas fa-eye" id="eye-icon-password"></i>
             </button>
         </div>
         <div class="password-container">
             <input class="register-input mb-3" id="confirm-password" asp-for="PasswordConfirm" placeholder="Подтвердить пароль" />
-            <button type="button" class="eye-icon" onclick="togglePassword('confirm-password')">
+            <button type="button" class="eye-icon-confirm-password" onclick="togglePassword('confirm-password')">
                 <i class="fas fa-eye" id="eye-icon-confirm-password"></i>
             </button>
         </div>
