--- a/src/Web/Web.MVC/Web.MVC/wwwroot/css/auth/Register.css
+++ b/src/Web/Web.MVC/Web.MVC/wwwroot/css/auth/Register.css
@@ -2,6 +2,36 @@
     background-color: #f0f0f0;
 }
 
+.password-container {
+    position: relative;
+}
+
+.eye-icon-password {
+    position: absolute;
+    top: 50%;
+    right: 10%;
+    transform: translateY(-55%);
+    cursor: pointer;
+    background: none;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    color: black;
+}
+
+.eye-icon-confirm-password {
+    position: absolute;
+    top: 50%;
+    right: 10%;
+    transform: translateY(-73%);
+    cursor: pointer;
+    background: none;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    color: black;
+}
+
 h2 {
     margin-bottom: 20px;
     color: #333;
