Update css style

--- a/src/Web/Web.MVC/Web.MVC/wwwroot/css/auth/ResetPassword.css
+++ b/src/Web/Web.MVC/Web.MVC/wwwroot/css/auth/ResetPassword.css
@@ -2,6 +2,23 @@
     margin: 0 30%;
 }
 
+.password-container {
+    position: relative;
+}
+
+.eye-icon {
+    position: absolute;
+    top: 50%;
+    right: 1%;
+    transform: translateY(-55%);
+    cursor: pointer;
+    background: none;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    color: black;
+}
+
 .reset-password-input {
     width: 100%;
     padding: 12px 15px;
